--- a/server.properties
+++ b/server.properties
@@ -30,7 +30,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=vx7 Survival
+motd=survival shits 
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
