--- a/plugins/SetHomes/homes.yml
+++ b/plugins/SetHomes/homes.yml
@@ -1,5 +1,11 @@
 allNamedHomes:
   c7797be3-898d-3cca-8d09-70e0d7372e6f:
+    world: leave
+    x: 372.9832021109972
+    y: 66.0
+    z: -67.9934354728539
+    pitch: 26.220333
+    yaw: -126.67831
     spiderfarm:
       world: leave
       x: 458.30000001192093
