iron farm doing

--- a/plugins/SetHomes/homes.yml
+++ b/plugins/SetHomes/homes.yml
@@ -21,3 +21,10 @@ unknownHomes:
     z: -67.9934354728539
     pitch: 26.220333
     yaw: -126.67831
+  c7797be3-898d-3cca-8d09-70e0d7372e6f:
+    world: leave
+    x: 388.1336704240666
+    y: 63.0
+    z: 189.47934045716417
+    pitch: 23.158508
+    yaw: -17.600433
