--- a/plugins/SetHomes/homes.yml
+++ b/plugins/SetHomes/homes.yml
@@ -1,30 +1,24 @@
 allNamedHomes:
   c7797be3-898d-3cca-8d09-70e0d7372e6f:
-    world: leave
-    x: 372.9832021109972
-    y: 66.0
-    z: -67.9934354728539
-    pitch: 26.220333
-    yaw: -126.67831
+    ironfarm:
+      world: leave
+      x: 383.235613090572
+      y: 63.0
+      z: 191.91024852755365
+      pitch: 43.06543
+      yaw: -129.36673
     spiderfarm:
       world: leave
       x: 458.30000001192093
       y: -2.0
-      z: -99.69999998807907
-      pitch: 30.498474
-      yaw: -47.911987
+      z: -113.69999998807907
+      pitch: -4.81286
+      yaw: -33.32849
 unknownHomes:
-  fc1c7f89-4bfb-39c2-89a0-d1732614703e:
-    world: leave
-    x: 372.9832021109972
-    y: 66.0
-    z: -67.9934354728539
-    pitch: 26.220333
-    yaw: -126.67831
   c7797be3-898d-3cca-8d09-70e0d7372e6f:
     world: leave
-    x: 388.1336704240666
-    y: 63.0
-    z: 189.47934045716417
-    pitch: 23.158508
-    yaw: -17.600433
+    x: 371.3518269018356
+    y: 66.0
+    z: -67.15911376629612
+    pitch: 5.4130225
+    yaw: 178.3657
